# gothic-1-remake-auto-lock-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  playback.rs  solver.rs
static/: index.html
