[package]
name = "locksolver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
enigo = { version = "0.3", default-features = false, features = ["x11rb"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
