[package]
name = "locksolver"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# enigo: platform-specific keyboard simulation backend.
# Linux uses x11rb; Windows/macOS auto-detect with default features.
[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.3", default-features = false, features = ["x11rb"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
enigo = { version = "0.3" }
tower-http = { version = "0.5", features = ["fs", "cors"] }
